# tutor-app

./: .dockerignore  .env  .gitignore  docker-compose.yml  dockker
.devcontainer/: devcontainer.json  devcontainer1.json
backend/: Dockerfile  main.py  pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json
